# FPV_VR

./: CMakeLists.txt  README.md  local.properties
app/: app-release.apk  build.gradle
app/src/androidTest/java/com/constantin/wilson/FPV_VR/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/c-ndk/: frsky.c  frsky.h  ltm.c  ltm.h  mavlink.c  mavlink.h  parser.c  qcom.c  telemetry.c  telemetry.h  test.c  test.h
app/src/main/c-ndk/package2/: VsyncHelperNative.c  nanoseconds.h
app/src/main/java/com/constantin/wilson/FPV_VR/: CameraGimbalTracker.java  DeletedStuff.java  DistortionData.java  EGL14Config.java  FrameTimes.java  GLActivityMono.java  GLActivityStereo.java  GLActivityStereoFB.java  GLHelper.java  GLProgramColor.java  GLProgramColorClear.java  GLProgramTex.java  GLProgramTexEx.java  GLRendererMono.java  GLRendererStereo.java  GLRendererStereoFB.java  GLRendererStereoFBLatencyTester.java  GLSurfaceViewFB.java  GPSHelper.java  GPUCapTest.java  GeometryHelper.java  LowLagDecoder.java  MainActivity.java  MediaCodecFormatHelper.java  MyGLRenderer.java  MyOSDReceiverRenderer.java  MyOSDReceiverRendererHelper.java  OGLProgramColor.java  OGLProgramTex.java  OGLProgramTexEx.java  OSDReceiverRenderer.java  OSDSettings.java  OpenGLActivity.java  OpenGLHelper.java  OverdrawLayer.java  OverlayTexturePicture.java  QCOMHelper.java  SettingsActivity.java  SurfaceViewActivity.java  TestActivity.java  (+6 more)
app/src/main/res/layout/: activity_main.xml  activity_oglmono.xml  activity_open_gl.xml  activity_open_gl2.xml  activity_settings.xml  activity_surface_view.xml  activity_test.xml  content_open_gl.xml  content_settings.xml  content_surface_view.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/mipmap-xxxhdpi/: Thumbs.db
app/src/main/res/values/: array.xml  strings.xml
app/src/main/res/xml/: phoneinfo.xml  preferences.xml
app/src/test/java/com/constantin/wilson/FPV_VR/: ExampleUnitTest.java
captures/: SystemInfo_2016.01.23_17.28.46.txt  SystemInfo_2016.01.23_17.30.56.txt  SystemInfo_2016.01.23_17.31.20.txt
gradle/wrapper/: gradle-wrapper.properties
